traefik-1/test-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-test
  namespace: test
spec:
  ports:
    - protocol: TCP
      name: backend-web
      port: 80
  selector:
    app: backend-test
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-svc
  namespace: test
  labels:
    app: backend-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-test
  template:
    metadata:
      labels:
        app: backend-test
    spec:
      containers:
        - name: backend
          image: httpd
          ports:
            - name: backend-web
              containerPort: 80
