traefik-1/test-frontend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-test
  namespace: test
spec:
  ports:
    - protocol: TCP
      name: frontendsvc
      port: 80
  selector:
    app: frontend-test
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: test
  labels:
    app: frontend-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-test
  template:
    metadata:
      labels:
        app: frontend-test
    spec:
      containers:
        - name: frontend
          image: nginx
          ports:
            - name: frontendsvc
              containerPort: 80
